# Convex-Hull-Algorithm

./: CMakeLists.txt  readme.md
app/: main.cpp
include/: convex_hull.h  point.h
src/: convex_hull.cpp  main.cpp  point.cpp
